--- a/FrontEnd/assets/css/styles.css
+++ b/FrontEnd/assets/css/styles.css
@@ -5,7 +5,8 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .search-bar{
-    padding: 20px 10px;
+    display: flexbox;
+    padding: px 10px;
     text-align: right;
 }
 .search-icon{
@@ -36,8 +37,9 @@ input{
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 0;
     border: 1px solid rgb(63, 63, 63);
-    
+    background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
 }
+
 .div-mostrar{
     border: 1px solid grey;
     border-radius: 3%;
@@ -74,15 +76,87 @@ input{
     transition: 1300ms;   
 }
 .logo{
+
     image-rendering: optimizeQuality;
     position: relative;
-    width: 25%;
+    width: 20%;
     height: 0%;
-    right: 80%;
+    right: 57%;
     top: 1%;
 }
-
+ 
 .container {
-    background-color: #eee;
+    height: 650px;
+    align-items: center;
     color: black;
+    padding: 0 40px;
+    background-image: linear-gradient(to top, #dad4ec 0%, #dad4ec 1%, #f3e7e9 100%);
+}
+
+.cta {
+    display: inline-block;
+    padding: auto;
+    width: 100px;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    text-align: center;
+    text-decoration: none;
+    color: #283773;
+    background: #fff;
+}
+
+.modal-container {
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carritocompras {
+    width: 40%;
+    height: 50%;
+    background: #fff;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: relative;
+    transition: transform 0.8s;
+    transform: translateY(0px);
+    border-radius: 10px;
+}
+
+.close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background: #c44a4a;
+    color: #fff;
+    line-height: 25px;   
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.carrito-close {
+    transform: translateY(0%);
+}
+
+@media screen and (max-width:1000px) {
+    section{
+        flex-direction: column-reverse;
+    }
+    .carritocompras{
+        text-align: center;
+    }
 }
